--- a/template.yaml
+++ b/template.yaml
@@ -8,7 +8,11 @@ Resources:
       Handler: lambda_handler.handler
       Runtime: python3.13
       CodeUri: .
-      Timeout: 30
+      Timeout: 60
+      MemorySize: 1024
+      Policies:
+        - AWSSecretsManagerGetSecretValuePolicy:
+            SecretArn: !Sub 'arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:my-agent-*'
       Environment:
         Variables:
           PYTHONPATH: /var/task
