--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,14 +1,14 @@
 version = 0.1
 
 [default.deploy.parameters]
-stack_name = "sam-app"
+stack_name = "ravs-mcp-app"
 resolve_s3 = true
-s3_prefix = "sam-app"
+s3_prefix = "ravs-mcp-app"
 confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
 image_repositories = []
-parameter_overrides = "SecretName=\"my-agent\""
+parameter_overrides = "SecretName=\"y\""
 
 [default.global.parameters]
 region = "us-east-1"
